--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aliakbarazizi/headless-datepicker",
+  "name": "@innei/headless-datepicker",
   "description": "React headless datepicker",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   "files": [
     "dist"
   ],
-  "version": "2.0.2",
+  "version": "2.0.2-fork.1",
   "main": "./dist/headless-datepicker.js",
   "module": "./dist/headless-datepicker.mjs",
   "types": "./dist/headless-datepicker.d.ts",
